fixed dark mode bug where bg img lost during gradient switch & set card-header bg to rgba(0,0,0,.03) instead of 'unset' which made it white not grey

--- a/Assets/indexstyle3.css
+++ b/Assets/indexstyle3.css
@@ -1,8 +1,9 @@
 
 html, body {
-    background-color: #F7F5F5;
+    /* background: linear-gradient(to left, rgb(112, 101, 214), rgb(230, 106, 213)); */
     background-image: url(https://images.pexels.com/photos/1939485/pexels-photo-1939485.jpeg);
     /* background-image: url(https://images.pexels.com/photos/3255761/pexels-photo-3255761.jpeg);  */
+
 }
 html {
     margin: 5px;
